feat: install package
